--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,143 +1,124 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.sunshine.app.DetailFragment">
+    android:orientation="vertical">
 
-    <ScrollView
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/white" />
 
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="vertical"
-          >
+    <include layout="@layout/detail_today_grid"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"/>
 
-          <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:gravity="start"
-          android:textSize="24sp"
-          android:fontFamily="sans-serif-condensed"
-          android:id="@+id/detail_item_monthday_textview"
-          />
-          <TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:gravity="start"
-              android:id="@+id/detail_item_date_textview"
-              android:textSize="16sp"
-              android:fontFamily="sans-serif-condensed"
-              android:textColor="@color/light_text"
-              />
+    <LinearLayout
+        android:id="@+id/detail_additional_pane"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:background="@color/detail_accent_pane_background"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
+        android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
+        android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
+        android:paddingRight="@dimen/forecast_detail_horizontal_padding"
+        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
+        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material">
 
-          <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="horizontal"
-              android:layout_marginTop="16dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-              >
-              <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:orientation="vertical"
-                  android:gravity="start"
-                  >
+            <TextView
+                android:id="@+id/detail_humidity_label_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
+                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
+                android:gravity="center_vertical"
+                android:text="@string/humidity"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="@color/detail_accent_label" />
 
-                  <TextView
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:gravity="center"
-                      android:paddingTop="20dp"
-                      android:paddingBottom="20dp"
-                      android:textSize="96sp"
-                      android:fontFamily="sans-serif-light"
-                      android:id="@+id/detail_item_high_textview"
-                      />
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
+                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
+                android:id="@+id/detail_humidity_textview"
+                android:gravity="center_vertical"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textColor="@android:color/white"
+                tools:text="38%" />
+        </LinearLayout>
 
-                  <TextView
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:gravity="center"
-                      android:paddingTop="20dp"
-                      android:paddingBottom="20dp"
-                      android:textSize="48sp"
-                      android:textColor="@color/light_text"
-                      android:fontFamily="sans-serif-light"
-                      android:id="@+id/detail_item_low_textview"
-                      />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-              </LinearLayout>
-              <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:orientation="vertical"
-                  android:gravity="center_horizontal"
-                  android:layout_gravity="center"
-                  >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
+                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
+                android:id="@+id/detail_pressure_label_textview"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical"
+                android:text="@string/pressure"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="@color/detail_accent_label" />
 
-                  <ImageView
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:gravity="center"
-                      android:id="@+id/detail_item_icon"
-                      android:adjustViewBounds="true"
-                      />
 
-                  <TextView
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:textAppearance="?android:textAppearanceLarge"
-                      android:textColor="@color/light_text"
-                      android:gravity="center"
-                      android:fontFamily="sans-serif-condensed"
-                      android:id="@+id/detail_item_forecast_textview"
-                      />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/detail_pressure_textview"
+                android:gravity="center_vertical"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textColor="@android:color/white"
+                tools:text="995 hPa" />
 
-              </LinearLayout>
-          </LinearLayout>
-          <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:paddingTop="4dp"
-          android:gravity="start"
-          android:textAppearance="?android:textAppearanceLarge"
-              android:fontFamily="sans-serif-light"
-          android:id="@+id/detail_item_forecast_humidity" />
-          <TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:paddingTop="4dp"
-              android:textAppearance="?android:textAppearanceLarge"
-              android:fontFamily="sans-serif-light"
-              android:gravity="start"
-              android:layout_gravity="start"
-              android:id="@+id/detail_item_forecast_pressure"
-              />
-          <TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:paddingTop="4dp"
-              android:gravity="start"
-              android:textAppearance="?android:textAppearanceLarge"
-              android:fontFamily="sans-serif-light"
-              android:id="@+id/detail_item_forecast_wind"
-              />
-          <com.example.android.sunshine.app.MyView
-              android:layout_marginTop="10dp"
-              android:layout_height="100dp"
-              android:layout_width="100dp"
-              android:id="@+id/detail_item_my_view"
-              />
-          </LinearLayout>
+        </LinearLayout>
 
-    </ScrollView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-</RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
+                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
+                android:id="@+id/detail_wind_label_textview"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical"
+                android:text="@string/wind"
+                android:textColor="@color/detail_accent_label"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/detail_wind_textview"
+                android:gravity="center_vertical"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textColor="@android:color/white"
+                tools:text="4km/h NW" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <ImageSwitcher
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageSwitcher"
+        android:layout_gravity="right" />
+</LinearLayout>
