--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -1,156 +1,116 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.sunshine.app.DetailFragment">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:orientation="horizontal">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <FrameLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:minWidth="56dp"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minWidth="120dp"
-                    android:textSize="24sp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:gravity="top"
-                    android:id="@+id/detail_item_monthday_textview"
-                    />
+            android:layout_weight="1"
+            >
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="top"
-                    android:textSize="20sp"
-                    android:textColor="@color/light_text"
-                    android:fontFamily="sans-serif-condensed"
-                    android:id="@+id/detail_item_date_textview"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="16dp"
-                >
+            <include layout="@layout/detail_today_grid"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:elevation="0dp"
+                android:background="@android:color/transparent"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:gravity="top">
-                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
+        </FrameLayout>
 
+        <android.support.v7.widget.GridLayout
+            android:id="@+id/detail_additional_pane"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:columnCount="2"
+            android:background="@color/detail_accent_pane_background"
+            android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
+            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+            >
 
-                        android:gravity="top"
-                        >
+            <android.support.v7.widget.Space
+                app:layout_columnSpan="2"
+                app:layout_rowWeight="1" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="96sp"
-                            android:fontFamily="sans-serif-light"
-                            android:id="@+id/detail_item_high_textview"
-                            android:gravity="top"
-                            />
+            <TextView
+                android:id="@+id/detail_humidity_label_textview"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical"
+                android:text="@string/humidity"
+                android:textColor="@color/detail_accent_label"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+                android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
+                />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="48sp"
-                            android:textColor="@color/light_text"
-                            android:fontFamily="sans-serif-light"
-                            android:id="@+id/detail_item_low_textview"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingTop="16dp"
-                            android:textAppearance="?android:textAppearanceLarge"
-                            android:fontFamily="sans-serif-condensed"
-                            android:gravity="left"
-                            android:id="@+id/detail_item_forecast_humidity" />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingTop="4dp"
-                            android:gravity="left"
-                            android:textAppearance="?android:textAppearanceLarge"
-                            android:fontFamily="sans-serif-condensed"
-                            android:id="@+id/detail_item_forecast_wind"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingTop="4dp"
-                            android:textAppearance="?android:textAppearanceLarge"
-                            android:fontFamily="sans-serif-condensed"
-                            android:gravity="left"
-                            android:id="@+id/detail_item_forecast_pressure"
-                            />
-                        <com.example.android.sunshine.app.MyView
-                            android:layout_marginTop="10dp"
-                            android:layout_height="100dp"
-                            android:layout_width="100dp"
-                            android:id="@+id/detail_item_my_view"
-                            />
-                    </LinearLayout>
+            <TextView
+                android:id="@+id/detail_humidity_textview"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical"
+                tools:text="38%"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                />
 
-                </LinearLayout>
-
-            </LinearLayout>
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                >
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:id="@+id/detail_item_icon"
-                    android:adjustViewBounds="true"
-                    />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:textAppearanceLarge"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textColor="@color/light_text"
-                    android:gravity="center"
-                    android:id="@+id/detail_item_forecast_textview"
-                    />
-
-            </LinearLayout>
-        </LinearLayout>
+            <TextView
+                android:id="@+id/detail_pressure_label_textview"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical"
+                android:text="@string/pressure"
+                android:textColor="@color/detail_accent_label"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:paddingTop="@dimen/detail_view_extra_padding"
+                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+                android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
+                />
 
 
+            <TextView
+                android:id="@+id/detail_pressure_textview"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical"
+                tools:text="995 hPa"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                />
 
+            <TextView
+                android:id="@+id/detail_wind_label_textview"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical"
+                android:text="@string/wind"
+                android:textColor="@color/detail_accent_label"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:paddingTop="@dimen/detail_view_extra_padding"
+                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+                />
 
-    </ScrollView>
+            <TextView
+                android:id="@+id/detail_wind_textview"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical"
+                tools:text="4km/h NW"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                />
 
-</RelativeLayout>
+            <android.support.v7.widget.Space
+                app:layout_columnSpan="2"
+                app:layout_rowWeight="1" />
+
+        </android.support.v7.widget.GridLayout>
+    </LinearLayout>
+</FrameLayout>
